<resources>
    <string name="app_name">CamerArt</string>

    <string name="flash_key" translatable="false">flash</string>
    <string name="flash_value_off" translatable="false">off</string>
    <string name="flash_value_on" translatable="false">on</string>
    <string name="flash_value_auto" translatable="false">auto</string>
    <string name="flash">Flash</string>
    <string name="flash_always_off">Always Off</string>
    <string name="flash_always_on">Always On</string>
    <string name="flash_on_dark_env">On dark environments</string>

    <string name="capture_key" translatable="false">capmode</string>
    <string name="capture_value_latency" translatable="false">latency</string>
    <string name="capture_value_quality" translatable="false">quality</string>
    <string name="capture_value_zero" translatable="false">zero</string>

    <string name="capture">Mode</string>
    <string name="minimize_latency">Minimize latency</string>
    <string name="maximize_quality">Maximize quality</string>
    <string name="zero_lag">Even less latency</string>

    <string name="jpeg_quality_key" translatable="false">jpeg</string>
    <string name="jpeg_quality">JPEG Compression Quality</string>

    <string name="rotation_key" translatable="false">rotation</string>
    <string name="rotation">Force Rotation</string>

    <string name="image_fmt_key" translatable="false">imgfmt</string>
    <string name="image_fmt">Format</string>

    <string name="extension_key" translatable="false">exts</string>
    <string name="extension">Extension</string>

    <string name="metering_mode_key" translatable="false">metermode</string>
    <string name="metering_mode_value_auto_focus" translatable="false">focus</string>
    <string name="metering_mode_value_auto_exposure" translatable="false">exposure</string>
    <string name="metering_mode_value_auto_white_balance" translatable="false">whitebalance</string>
    <string name="metering_mode">Metering Mode</string>
    <string name="metering_mode_auto_focus">Auto Focus</string>
    <string name="metering_mode_auto_exposure">Auto Exposure</string>
    <string name="metering_mode_auto_white_balance">Auto White Balance</string>

    <string name="auto_cancel_duration_key" translatable="false">autocnldur</string>
    <string name="auto_cancel_duration">Focus Auto Cancel Duration</string>
    <string name="auto_cancel_duration_summary">Delay in seconds before cancelling focus</string>

    <string name="lumus_key" translatable="false">lumus</string>
    <string name="lumus_summary">Show average luminosity</string>

    <string name="filter_key" translatable="false">flt</string>
    <string name="filter_value_none" translatable="false">none</string>
    <string name="filter_value_nogreen" translatable="false">nogreen</string>
    <string name="filter_value_gray" translatable="false">gray</string>
    <string name="filter_value_sepia" translatable="false">sepia</string>
    <string name="filter_value_negative" translatable="false">neg</string>
    <string name="filter_value_aqua" translatable="false">aqua</string>
    <string name="filter_value_faded" translatable="false">faded</string>
    <string name="filter_value_sketch" translatable="false">sketch</string>
    <string name="filter_value_blur" translatable="false">blur</string>
    <string name="filter_value_sharpen_light" translatable="false">shrpl</string>
    <string name="filter_value_sharpen_hard" translatable="false">shrph</string>
    <string name="filter_value_emboss" translatable="false">emboss</string>
    <string name="filter_value_edge" translatable="false">edge</string>
    <string name="filter">Filters</string>
    <string name="filter_summary">Apply an image filter</string>
    <string name="filter_name_nogreen">No Green</string>
    <string name="filter_name_gray">Gray</string>
    <string name="filter_name_sepia">Sepia</string>
    <string name="filter_name_negative">Negative</string>
    <string name="filter_name_aqua">Aqua</string>
    <string name="filter_name_faded">Faded</string>
    <string name="filter_name_sketch">Sketch</string>
    <string name="filter_name_blur">Blur</string>
    <string name="filter_name_edge">Edge</string>
    <string name="filter_name_sharpen_light">Sharpen</string>
    <string name="filter_name_sharpen_hard">Sharpen Hard</string>
    <string name="filter_name_emboss">Emboss</string>

    <string name="video_quality_key" translatable="false">videoqual</string>

    <string name="video_duration_key" translatable="false">videodur</string>
    <string name="video_duration_summary">Limit video recording duration</string>

    <string name="video_stats_key" translatable="false">videostats</string>
    <string name="video_stats">Show Stats</string>
    <string name="video_stats_summary">Show recording stats</string>

    <string name="exposure_key" translatable="false">expos</string>
    <string name="exposure">Exposure</string>

    <string name="scaling_key" translatable="false">scale</string>
    <string name="scaling_value_center" translatable="false">center</string>
    <string name="scaling_value_start" translatable="false">start</string>
    <string name="scaling_value_end" translatable="false">end</string>
    <string name="scaling">Scaling</string>
    <string name="scaling_center">Center</string>
    <string name="scaling_start">Start</string>
    <string name="scaling_end">End</string>

    <string name="countdown_key" translatable="false">cntdwn</string>
    <string name="countdown">Countdown</string>
    <string name="countdown_summary">Seconds to wait before taking the photo or video</string>

    <string name="qrcode_key" translatable="false">qrcode</string>
    <string name="qrcode">QR Code Scanner</string>
    <string name="qrcode_summary">Scan QR Codes</string>

    <string name="multi_camera_key" translatable="false">mltcam</string>
    <string name="multi_camera">Multi Camera</string>
    <string name="multi_camera_summary">Use front and back camera simultaneously</string>

    <string name="action_sound_key" translatable="false">actsound</string>
    <string name="action_sound">Sound Effects</string>
    <string name="action_sound_summary">Play sounds when taking photo/videos</string>

    <string name="brightness_key" translatable="false">brightness</string>
    <string name="brightness">Bright Screen</string>
    <string name="brightness_summary">Keep the screen at maximum brightness</string>

    <string name="photo_saved_success">Photo saved successfully in</string>
    <string name="video_saved_success">Video saved successfully in</string>
    <string name="photo_error">Error while taking the photo</string>
    <string name="video_saved_failed">Error during video capture: </string>
    <string name="paused">Paused</string>
    <string name="resumed">Resumed</string>

    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="quality">Quality</string>
    <string name="duration">Duration</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="misc">Misc</string>
</resources>