<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Photo">
        <ListPreference
            app:key="@string/flash_key"
            app:title="@string/flash"
            app:entries="@array/flash_names"
            app:entryValues="@array/flash_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="auto" />

        <ListPreference
            app:key="@string/capture_key"
            app:title="@string/capture"
            app:entries="@array/capture_names"
            app:entryValues="@array/capture_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="latency" />

        <SeekBarPreference
            app:key="@string/jpeg_quality_key"
            app:title="@string/jpeg_quality"
            app:min="1"
            app:showSeekBarValue="true"
            android:max="100" />

        <ListPreference
            app:key="@string/rotation_key"
            app:title="@string/rotation"
            app:entries="@array/rotation_names"
            app:entryValues="@array/rotation_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="0" />

        <ListPreference
            app:key="@string/image_fmt_key"
            app:title="@string/image_fmt"
            app:entries="@array/empty"
            app:entryValues="@array/empty"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:key="@string/extension_key"
            app:title="@string/extension"
            app:entries="@array/extensions"
            app:entryValues="@array/extensions"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="None" />

        <MultiSelectListPreference
            app:key="@string/metering_mode_key"
            app:title="@string/metering_mode"
            app:entries="@array/metering_modes"
            app:entryValues="@array/metering_mode_values"
            app:defaultValue="@array/metering_mode_values" />

        <DropDownPreference
            app:key="pref_auto_cancel_duration"
            app:title="Focus Auto Cancel Duration"
            app:entries="@array/numbers"
            app:entryValues="@array/numbers"
            app:summary="Delay in seconds before cancelling focus" />

        <SwitchPreferenceCompat
            app:key="pref_lumus"
            app:title="Lumus"
            app:summary="Show average luminosity"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Video">
        <SwitchPreferenceCompat
            app:key="pref_use_video_temp"
            app:title="Do a video"
            app:defaultValue="false" />

        <ListPreference
            app:key="pref_video_quality"
            app:title="Quality"
            app:entries="@array/empty"
            app:entryValues="@array/empty"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="pref_video_duration"
            app:title="Duration"
            app:summary="Limit video recording duration" />

        <SwitchPreferenceCompat
            app:key="pref_show_video_stats"
            app:title="Show Stats"
            app:summary="Display recording stats on screen"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Preview">
        <ListPreference
            app:key="pref_scale"
            app:title="Scaling"
            app:entries="@array/scale_names"
            app:entryValues="@array/scale_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="center" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Misc">
        <SeekBarPreference
            app:key="pref_countdown"
            app:title="Countdown"
            app:showSeekBarValue="true"
            app:defaultValue="0"
            app:min="0"
            android:max="60"
            app:seekBarIncrement="1"
            app:summary="Wait a bit before taking the photo/video" />

        <SeekBarPreference
            app:key="pref_exposure"
            app:title="Exposure"
            app:showSeekBarValue="true"
            app:enabled="false" />

        <SwitchPreferenceCompat
            app:key="pref_multi_camera"
            app:title="Multi Camera"
            app:summary="Use front and back camera simultaneously"
            app:defaultValue="false"
            app:enabled="false" />

        <SwitchPreferenceCompat
            app:key="pref_qrcode"
            app:title="QR Code Scanner"
            app:summary="Scan QR Codes"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>